@trivial fix scrollbar on the side of the dropdown

--- a/src/dropdown/index.css
+++ b/src/dropdown/index.css
@@ -21,7 +21,7 @@
     transition: opacity var(--spectrum-transition-time), transform var(--spectrum-transition-time);
     min-width: 100%;
     max-height: var(--spectrum-flyout-max-height-default);
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   &.is-disabled {
